MDEV-4753: partition_innodb_stmt reports memory leaks from dict/dict0stats_bg.cc:69 - Work around the problem by forcing recalc_pool to free its buffer   in dict_stats_recalc_pool_deinit().